--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#">En venta</a>
+            <a class="nav-link" href="./propiedades_venta.html">En venta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Alquiler</a>
+            <a class="nav-link" href="./propiedades_alquiler.html">Alquiler</a>
           </li>
         </ul>
       </div>
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-      <a href="#" class="btn btn-dark">Ver todas las propiedades en venta</a>
+      <a href="./propiedades_venta.html" class="btn btn-dark">Ver todas las propiedades en venta</a>
     </section>
     <hr />
     <!-- Propiedades en alquiler -->
@@ -233,7 +233,7 @@
           </div>
         </div>
       </div>
-      <a href="#" class="btn btn-dark">Ver todas las propiedades en alquiler</a>
+      <a href="./propiedades_alquiler.html" class="btn btn-dark">Ver todas las propiedades en alquiler</a>
     </section>
   </div>
   <!-- Font awesome -->
@@ -242,6 +242,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+  <script defer type="module" src="./assets/JS/Componentes/index/script.js"></script>
 </body>
 
 </html>
